Revert "fix(PublicationCard): improve text contrast against background image"

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,8 +16,3 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-
-/* SETS CUSTOM BG OPACITY FOR CARD COMPONENT */
-.card.image-full::before {
-  @apply opacity-90;
-}
